--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tailwindcss/typography": "^0.5.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "marked": "^9.1.1",
+    "marked-highlight": "^2.0.6",
     "next": "13.5.4",
     "posthog-js": "^1.83.0",
     "react": "^18",
