--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "highlight.js": "^11.9.0",
     "marked": "^9.1.1",
     "marked-highlight": "^2.0.6",
     "next": "13.5.4",
